# uk1e2

./: .gitignore  Dockerfile  Makefile  README.md  add_urls.py  collapse_repeats.py  csv2jsonl.py  environment.yml  mp3.scp  prep_test_data.py  pyproject.toml  replay.py  transform.sh  youtube.ids  youtube.jsonl  youtube.txt  youtube1.tsv  youtube1.txt  youtube2.tsv  youtube2.txt  youtube2_normalized.csv  youtube_normalized.csv  ytable-collapsed.jsonl  ytable-urls.jsonl  ytable1.jsonl  zip_jsonl_csv.py
.github/workflows/: main.yml
data/local/: f2utt_id  scp
exp/: segmented+aligned.ids
news/: index.json  text.jsonl  urls
news/align/: 111729706.json  111742809.json  111785748.json  111787674.json  111796139.json  111806800.json  111817890.json  111831428.json  111841214.json  111852402.json  111853843.json  111858743.json  111868125.json  111873012.json  111884421.json  111905176.json  111923961.json  111924335.json  111924499.json  111973368.json  112018166.json  112018171.json  112021903.json  112023790.json  112031413.json  112066439.json  112078516.json  112083416.json  112129141.json  112131517.json  112132785.json  112134314.json  112163428.json  112174369.json  112179036.json  112207932.json  112248709.json  112252102.json  112252349.json  112322160.json  (+899 more)
uk1e2/: __about__.py  cut_all_files.py  cutter.py  cutter_v1.py  download.py  extract_segments.py  gather_whisper.py  news_part_description.txt  phonetisaurus.py  prep_test_data.py  prepare_kaldi.py  text.py  tokenize_text.py
uk1e2/eval/: generate_cache_folder.py  test_nemo.py  test_nemo_lm.py  test_wav2vec2.py  test_wav2vec2_lm.py  test_whisper_official.py
