[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uk1e2"
description = 'Ukrainian Speech Recognition Evaluation'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Volodymyr Kyrylov", email = "vol@wilab.org.ua" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "datasets",
  "datasette",
  "ftfy",
  "loguru",
  "pandas",
  "moviepy",
  "phonetisaurus",
  "requests",
  "stanza",
  "sqlite-utils",
  "tqdm",
  "websocket",
  "yt-dlp",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/proger/uk1e2#readme"
Issues = "https://github.com/proger/uk1e2/issues"
Source = "https://github.com/proger/uk1e2"

[tool.hatch.version]
path = "uk1e2/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=uk1e2 --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "uk1e2/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
